syntax = "proto3";

package mirai.v1;

import "google/protobuf/timestamp.proto";

// NotificationType categorizes notifications.
enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_TASK_ASSIGNED = 1;           // SME task assigned to user
  NOTIFICATION_TYPE_TASK_DUE_SOON = 2;           // Task due date approaching
  NOTIFICATION_TYPE_INGESTION_COMPLETE = 3;      // SME content ingestion finished
  NOTIFICATION_TYPE_INGESTION_FAILED = 4;        // SME content ingestion failed
  NOTIFICATION_TYPE_OUTLINE_READY = 5;           // Course outline generation complete
  NOTIFICATION_TYPE_GENERATION_COMPLETE = 6;     // Course content generation complete
  NOTIFICATION_TYPE_GENERATION_FAILED = 7;       // Course generation failed
  NOTIFICATION_TYPE_APPROVAL_REQUESTED = 8;      // Content awaiting approval
}

// NotificationPriority indicates urgency.
enum NotificationPriority {
  NOTIFICATION_PRIORITY_UNSPECIFIED = 0;
  NOTIFICATION_PRIORITY_LOW = 1;
  NOTIFICATION_PRIORITY_NORMAL = 2;
  NOTIFICATION_PRIORITY_HIGH = 3;
}

// NotificationEventType for real-time streaming events.
enum NotificationEventType {
  NOTIFICATION_EVENT_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_EVENT_TYPE_CREATED = 1;    // New notification created
  NOTIFICATION_EVENT_TYPE_READ = 2;       // Notification marked as read
  NOTIFICATION_EVENT_TYPE_DELETED = 3;    // Notification deleted
  NOTIFICATION_EVENT_TYPE_KEEPALIVE = 4;  // Keepalive to prevent proxy timeout
}

// Notification represents a user notification.
message Notification {
  string id = 1;
  string tenant_id = 2;
  string user_id = 3;

  NotificationType type = 4;
  NotificationPriority priority = 5;

  string title = 6;
  string message = 7;

  // Optional references for navigation
  optional string course_id = 8;
  optional string job_id = 9;
  optional string task_id = 10;
  optional string sme_id = 11;

  // Action URL for frontend navigation
  optional string action_url = 12;

  bool read = 13;
  bool email_sent = 14;

  google.protobuf.Timestamp created_at = 15;
  optional google.protobuf.Timestamp read_at = 16;
}

// SubscribeNotificationsRequest initiates a streaming subscription.
// User ID is derived from auth context.
message SubscribeNotificationsRequest {}

// SubscribeNotificationsResponse represents a real-time notification event.
// Each message in the stream contains an event type and the notification payload.
message SubscribeNotificationsResponse {
  NotificationEventType event_type = 1;
  Notification notification = 2;
}

// NotificationService handles notification operations.
service NotificationService {
  // ListNotifications returns notifications for the current user.
  rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse);

  // GetUnreadCount returns the count of unread notifications.
  rpc GetUnreadCount(GetUnreadCountRequest) returns (GetUnreadCountResponse);

  // MarkAsRead marks notifications as read.
  rpc MarkAsRead(MarkAsReadRequest) returns (MarkAsReadResponse);

  // MarkAllAsRead marks all notifications as read.
  rpc MarkAllAsRead(MarkAllAsReadRequest) returns (MarkAllAsReadResponse);

  // DeleteNotification deletes a notification.
  rpc DeleteNotification(DeleteNotificationRequest) returns (DeleteNotificationResponse);

  // SubscribeNotifications opens a server-streaming connection for real-time notification events.
  // Events are pushed when notifications are created, read, or deleted.
  rpc SubscribeNotifications(SubscribeNotificationsRequest) returns (stream SubscribeNotificationsResponse);
}

// ListNotificationsRequest contains filters.
message ListNotificationsRequest {
  optional bool unread_only = 1;
  optional NotificationType type = 2;
  int32 limit = 3;                    // Max results (default 50)
  optional string cursor = 4;         // For pagination
}

// ListNotificationsResponse contains notifications.
message ListNotificationsResponse {
  repeated Notification notifications = 1;
  optional string next_cursor = 2;    // For pagination
  int32 total_count = 3;
}

// GetUnreadCountRequest is empty.
message GetUnreadCountRequest {}

// GetUnreadCountResponse contains the count.
message GetUnreadCountResponse {
  int32 count = 1;
}

// MarkAsReadRequest contains notification IDs to mark.
message MarkAsReadRequest {
  repeated string notification_ids = 1;
}

// MarkAsReadResponse confirms the operation.
message MarkAsReadResponse {
  int32 marked_count = 1;
}

// MarkAllAsReadRequest marks all as read.
message MarkAllAsReadRequest {}

// MarkAllAsReadResponse confirms the operation.
message MarkAllAsReadResponse {
  int32 marked_count = 1;
}

// DeleteNotificationRequest contains the ID to delete.
message DeleteNotificationRequest {
  string notification_id = 1;
}

// DeleteNotificationResponse confirms deletion.
message DeleteNotificationResponse {}
